ready to go; just waiting on link

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -10,14 +10,18 @@
 
   <body>
     <div id="content">
-      <h3>The Unauthorized Duggar Name Jenarator</h3>
+      <h3>The Unauthorized Duggar Name Jenerator</h3>
       <div class="result_container">
         <h2 class="">Your new name is:</h2>
         <div class="name_container">
           <div class="num"></div>
           <div class="last">Duggar</div>
         </div>
-        <button class="start_over">Start over</button>
+        <div class="social">
+          <button class="facebook">Share on Facebook</button>
+          <button class="twitter">Share on Twitter</button>
+          <button class="start_over">Start over</button>
+        </div>
       </div>
       <div class="form_container">
         <form class="name_form" action="#">
@@ -25,7 +29,7 @@
             <!-- <h2>What's your first name?</h2> -->
             <input placeholder="What's your first name?" />
           </label>
-          <button class="submit" type="submit">Jenerate my Duggar name</button>
+          <button class="submit" type="submit">Jenerate My Duggar Name</button>
         </form>
       </div>
     </div>
