trying to fix spin bug

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -33,7 +33,7 @@
         </form>
       </div>
     </div>
-    <div class="big_j">J</div>
+    <div class="big_j"><span>J</span></div>
     <script src="global.js"></script>
   </body>
 </html>
